--- a/themes/default/layouts/partials/footer.html
+++ b/themes/default/layouts/partials/footer.html
@@ -2,7 +2,7 @@
     <div class="footer-copyright">
       <div class="container">
       {{.Site.Copyright}}
-      <div class="right"><a class="grey-text text-lighten-4" href="http://monasca.io">Monasca.io</a></div>
+      <div class="right"><a class="grey-text text-lighten-4" href="{{.Site.BaseURL}}">Monasca.io</a></div>
       </div>
     </div>
   </footer>
